# big-data-labs

./: .gitignore  Dockerfile  README.md  Vagrantfile  docker-compose.yaml  pyproject.toml
scripts/: __init__.py  lint.py  vagrant.py
scripts/base/: __init__.py  poetry_shell_script.py
src/clickhouse/: main.ipynb
src/map_reduce/: fetch.py  main.py  schemas.py
src/map_reduce/utils/: __init__.py  dependencies.py  httpx.py
src/spark-streaming/: generator.py  main.ipynb  subscriber.py
