[tool.poetry]
name = "src"
version = "1.0.0"
description = "University Big Data laboratory and practice tasks"
authors = ["Arseniy Savin <ayusavin@fantast.dev>"]
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
vagrant-up = 'scripts:VagrantUpScript'
vagrant-down = 'scripts:VagrantDownScript'
lint = 'scripts:LintScript'
format = 'scripts:FormatScript'

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
mrjob = "^0.7.4"
pydantic = "^2.7.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"
mypy = "^1.10.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
