[tool.poetry]
name = "src"
version = "1.0.0"
description = "University Big Data laboratory and practice tasks"
authors = ["Arseniy Savin <ayusavin@fantast.dev>"]
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
vagrant-up = 'scripts:VagrantUpScript'
vagrant-down = 'scripts:VagrantDownScript'
lint = 'scripts:LintScript'
format = 'scripts:FormatScript'

[tool.poetry.dependencies]
python = "^3.11"
faker = "^25.0.1"
numpy = "^1.26.4"
ipykernel = "^6.29.4"
kafka-python-ng = "^2.2.2"
pyspark = "^3.5.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
